Plug-InsProject/tests/com.cevelop.includator.tests/resources/com.cevelop.includator.tests/syntaxerrortests/SyntaxError5ProblemBindingInCSimpleDeclaration.rts
//!Problem Binding in C Simple Declaration
//% C
//@main.c
int i[] = {k};

int main(void) {
	return 0;
}